--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -104,6 +104,7 @@
 @import "components/list/products.less";
 @import "components/list/products-line.less";
 @import "components/list/products-slider.less";
+@import "components/list/products-set.less";
 @import "components/list/reasons-to-buy.less";
 @import "components/list/simple.less";
 @import "components/list/socials.less";
@@ -156,6 +157,7 @@
 @import "components/box/preview.less";
 @import "components/box/price-slider.less";
 @import "components/box/products-slider.less";
+@import "components/box/products-set.less";
 @import "components/box/progress.less";
 @import "components/box/promo-code.less";
 @import "components/box/promo-image.less";
