--- a/assets/styles/frontend/common/components/list/products.less
+++ b/assets/styles/frontend/common/components/list/products.less
@@ -289,4 +289,21 @@
             }
         }
     }
+
+    &__item-set {
+        width: 100%;
+        margin-bottom: 15px;
+
+        border-bottom: 1px solid @color-border;
+
+        &:last-child {
+            border-bottom: 0;
+        }
+
+        @media @query-lg {
+            margin-bottom: -1px;
+
+            border-bottom: 0;
+        }
+    }
 }
