design: fix hover for menu links

--- a/assets/styles/frontend/common/components/list/menu.less
+++ b/assets/styles/frontend/common/components/list/menu.less
@@ -302,6 +302,7 @@
 
                     &:hover {
                         color: @color-primary;
+                        text-decoration: underline;
                     }
 
                     @media @query-vl {
