Minor fixes of sets in product list.

--- a/assets/styles/frontend/common/components/box/products-set.less
+++ b/assets/styles/frontend/common/components/box/products-set.less
@@ -95,6 +95,8 @@
                 font-size: @font-size-small;
                 font-family: @font-alt;
                 font-weight: 400;
+                color: @color-price-old;
+                text-decoration: line-through;
             }
         }
 
