--- a/assets/styles/frontend/common/components/in/flag.less
+++ b/assets/styles/frontend/common/components/in/flag.less
@@ -31,6 +31,7 @@
     }
 
     &--product-set {
+        height: 23px;
         position: static;
     }
 
@@ -47,14 +48,5 @@
         font-size: 10px;
         background-color: @color-light;
         text-transform: uppercase;
-
-        .in-flag--detail &, .in-flag--product-set & {
-            line-height: 21px;
-            padding: 1px 10px;
-
-            font-size: @font-size-small;
-            font-weight: 700;
-            border-radius: @radius-medium;
-        }
     }
 }
