FE product detail: do not display link to store for sale products

--- a/templates/Front/Inline/Product/detailAvailability.html.twig
+++ b/templates/Front/Inline/Product/detailAvailability.html.twig
@@ -7,7 +7,7 @@
         </div>
 
         {% set stocksWithoutZeroQuantityOnPickupPlaceStore = product.stocksWithoutZeroQuantityOnPickupPlaceStore(getDomain()) %}
-        {% if stocksWithoutZeroQuantityOnPickupPlaceStore|length > 0 %}
+        {% if stocksWithoutZeroQuantityOnPickupPlaceStore|length > 0 and product.isInAnySaleStock is same as (false) %}
             <span class="in-availability__text-big">
                 {{ 'nebo na'|trans }}&nbsp
             </span>
