--- a/assets/styles/frontend/common/components/list/products-set.less
+++ b/assets/styles/frontend/common/components/list/products-set.less
@@ -188,6 +188,9 @@
         }
 
         &__info {
+            line-height: 18px;
+            
+            font-size: @font-size-small;
             text-align: center;
             color: @color-base;
         }
