design: edit small css issues

--- a/assets/styles/frontend/common/components/list/products.less
+++ b/assets/styles/frontend/common/components/list/products.less
@@ -305,5 +305,9 @@
 
             border-bottom: 0;
         }
+
+        .box-list--search & {
+            margin-bottom: 15px;
+        }
     }
 }
