--- a/assets/styles/frontend/common/components/box/products-set.less
+++ b/assets/styles/frontend/common/components/box/products-set.less
@@ -83,6 +83,7 @@
         align-items: center;
         padding: 20px;
         width: 100%;
+        margin-top: auto;
 
         text-decoration: none;
 
