[TF-213] Show calculated availability at frontend and change availability colors

--- a/assets/styles/frontend/common/components/in/availability.less
+++ b/assets/styles/frontend/common/components/in/availability.less
@@ -80,7 +80,7 @@
         font-weight: 500;
 
         &--not-available {
-            color: @color-gray;
+            color: @color-blue-dark;
         }
 
         &--out-of-stock {
