--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -30,7 +30,7 @@
 
     <div class="box-detail-add__buttons">
         {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'box-detail-add__buttons__item btn btn--success btn--large', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
-        <button class="box-detail-add__buttons__item btn btn--large js-not-implemented-yet">{{ 'Koupit na splátky'|trans }}</button>
+        <button class="box-detail-add__buttons__item btn btn--large js-not-implemented-yet" {% if disabled %}disabled="disabled"{% endif %} data-hard-disabled="{{ hardDisabled }}">{{ 'Koupit na splátky'|trans }}</button>
     </div>
 
     <div class="box-detail-add__payments js-not-implemented-yet">
